--- a/pom.xml
+++ b/pom.xml
@@ -62,36 +62,24 @@
           <version>2.8.2</version>
         </plugin>
 	<plugin>
-<groupId>org.jacoco</groupId>
-<artifactId>jacoco-maven-plugin</artifactId>
-<version>0.8.3</version>
-<executions>
-<execution>
-<goals>
-<goal>prepare-agent</goal>
-</goals>
-</execution>
-<execution>
-<id>jacoco-report</id>
-<phase>test</phase>
-<goals>
-<goal>report</goal>
-</goals>
-<!-- default target/jscoco/site/* -->
-<configuration>
-<outputDirectory>target/jacoco-report</outputDirectory>
-<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-<rules>
-<rule>
-<element>CLASS</element>
-<excludes>
-<exclude>com.asimio.demo.Application</exclude>
-</excludes>
-</rule>
-</rules>
-</configuration>
-</execution>
-</executions>
+	<groupId>org.jacoco</groupId>
+	<artifactId>jacoco-maven-plugin</artifactId>
+	<version>0.8.2</version>
+	<executions>
+		<execution>
+			<goals>
+				<goal>prepare-agent</goal>
+			</goals>
+		</execution>
+		<!-- attached to Maven test phase -->
+		<execution>
+			<id>report</id>
+			<phase>test</phase>
+			<goals>
+				<goal>report</goal>
+			</goals>
+		</execution>
+	</executions>
 </plugin>
       </plugins>
     </pluginManagement>
