--- a/pom.xml
+++ b/pom.xml
@@ -61,26 +61,38 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
-	<plugin>
-	<groupId>org.jacoco</groupId>
-	<artifactId>jacoco-maven-plugin</artifactId>
-	<version>0.8.2</version>
-	<executions>
-		<execution>
-			<goals>
-				<goal>prepare-agent</goal>
-			</goals>
-		</execution>
-		<!-- attached to Maven test phase -->
-		<execution>
-			<id>report</id>
-			<phase>test</phase>
-			<goals>
-				<goal>report</goal>
-			</goals>
-		</execution>
-	</executions>
-</plugin>
+        <plugin>
+               <groupId>org.jacoco</groupId>
+               <artifactId>jacoco-maven-plugin</artifactId>
+               <version>0.7.9</version>
+               <executions>
+                   <!-- prepare agent for measuring unit tests -->
+                   <execution>
+                       <id>prepare-unit-tests</id>
+                       <goals>
+                           <goal>prepare-agent</goal>
+                       </goals>
+                       <configuration>
+                           <append>true</append>
+                           <destFile>${sonar.jacoco.reportPath}</destFile>
+                           <!-- Sets the VM argument line used when unit tests are run. -->
+                           <propertyName>surefireArgLine</propertyName>
+                       </configuration>
+                   </execution>
+               </executions>
+           </plugin>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.19.1</version>
+               <configuration>
+                   <printSummary>false</printSummary>
+                   <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                   <forkCount>3</forkCount>
+                   <reuseForks>true</reuseForks>
+                   <argLine>${surefireArgLine} -Xmx1024m -noverify</argLine>                  
+               </configuration>
+           </plugin>
       </plugins>
     </pluginManagement>
   </build>
